# rust-tapyrus-wallet-ffi

./: .gitignore  CLAUDE.md  README.md  jitpack.yml  rust-tapyrus-wallet-ffi.sln
.claude/: settings.local.json
.github/workflows/: publish-android.yml  publish-csharp.yml  release.yml
TapyrusWalletAndroid/: README.md  build.gradle.kts  gradle.properties
TapyrusWalletAndroid/example/: README.md  settings.gradle.kts
TapyrusWalletAndroid/example/app/: build.gradle.kts
TapyrusWalletAndroid/example/app/src/main/java/com/chaintope/tapyrus/wallet/example/: ConnectionSettings.kt  MainActivity.kt  SettingsScreen.kt  TapyrusWalletManager.kt
TapyrusWalletAndroid/lib/: build.gradle.kts
TapyrusWalletAndroid/lib/src/main/kotlin/com/chaintope/tapyrus/wallet/: wallet.kt
TapyrusWalletAndroid/scripts/: build-android.sh  patch-wallet-kt.sh
TapyrusWalletCSharp/: README.md  TapyrusWalletCSharp.csproj  TapyrusWalletCSharp.sln
TapyrusWalletCSharp/TapyrusWalletCSharp/: .gitignore  TapyrusWalletCSharp.csproj
TapyrusWalletCSharp/TapyrusWalletCSharp.Tests/: WalletTest.cs
TapyrusWalletCSharp/TapyrusWalletExample/: WalletExample.cs
TapyrusWalletCSharp/docs/: getting-started.md
TapyrusWalletCSharp/example/: .gitignore  App.xaml  App.xaml.cs  ConnectionSettings.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  SettingsWindow.xaml  SettingsWindow.xaml.cs  TapyrusWalletExample.csproj  TapyrusWalletManager.cs  TransferWindow.xaml  TransferWindow.xaml.cs
TapyrusWalletSwift/: .gitignore  Package.swift.txt  README.md  create_xcframework.sh
TapyrusWalletSwift/example/example/: ConnectionSettings.swift  ContentView.swift  SettingsView.swift  TapyrusWalletManager.swift
TapyrusWalletSwift/example/example.xcodeproj/: project.pbxproj
TapyrusWalletSwift/example/example.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
TapyrusWalletSwift/example/example.xcodeproj/project.xcworkspace/xcuserdata/taniguchi.xcuserdatad/: UserInterfaceState.xcuserstate
rust-tapyrus-wallet-ffi/: Cargo.toml
rust-tapyrus-wallet-ffi/src/: lib.rs  wallet.udl
tapyrus-wallet-ffi/: Cargo.toml  build.rs  uniffi.toml
tapyrus-wallet-ffi/src/: lib.rs  wallet.cs  wallet.udl
tapyrus-wallet-ffi/tests/: master_key
