[package]
name = "tapyrus-wallet-ffi"
version = "0.1.0-alpha.2"
authors = ["Kohei Taniguchi <kohei@chaintope.com>"]
license = "MIT"
homepage = "https://github.com/chaintope/rust-tapyrus-wallet-ffi"
repository = "https://github.com/chaintope/rust-tapyrus-wallet-ffi"
keywords = [ "crypto", "tapyrus", "wallet"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "tapyrus_wallet_ffi"

[features]
default = ["uniffi/cli"]

[dependencies]
uniffi = { version = "=0.25.0" }
tdk_wallet = { git = "https://github.com/chaintope/tdk", branch = "fix_failure_wallet_tests", subdirectory = "crates/wallet" }
tdk_sqlite = { git = "https://github.com/chaintope/tdk", branch = "fix_failure_wallet_tests", subdirectory = "crates/sqlite" }
tdk_esplora = { git = "https://github.com/chaintope/tdk", branch = "fix_failure_wallet_tests", subdirectory = "crates/esplora", features = ["blocking"] }

[build-dependencies]
uniffi = { version = "=0.25.0", features = ["build"] } 

[dev-dependencies]
uniffi = { version = "=0.25.0", features = ["bindgen-tests"] }