[package]
name = "tapyrus-wallet-ffi"
version = "0.1.1"
authors = ["Kohei Taniguchi <kohei@chaintope.com>"]
license = "MIT"
homepage = "https://github.com/chaintope/rust-tapyrus-wallet-ffi"
repository = "https://github.com/chaintope/rust-tapyrus-wallet-ffi"
keywords = [ "crypto", "tapyrus", "wallet"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "tapyrus_wallet_ffi"

[features]
default = ["uniffi/cli"]

[dependencies]
uniffi = { version = "=0.25.0" }
tdk_wallet = { git = "https://github.com/chaintope/tdk", branch = "master", subdirectory = "crates/wallet" }
tdk_sqlite = { git = "https://github.com/chaintope/tdk", branch = "master", subdirectory = "crates/sqlite" }
tdk_esplora = { git = "https://github.com/chaintope/tdk", branch = "master", subdirectory = "crates/esplora", features = ["blocking"] }

[build-dependencies]
uniffi = { version = "=0.25.0", features = ["build"] } 

[dev-dependencies]
uniffi = { version = "=0.25.0", features = ["bindgen-tests"] }
tdk_testenv = { git = "https://github.com/chaintope/tdk", branch = "master", subdirectory = "crates/testenv", default-features = false }
serde = { version = "1.0.201", features = ["derive"] }
tdk_chain = { git = "https://github.com/chaintope/tdk", branch = "master", subdirectory = "crates/chain" }
rand = "0.8.5"